--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/checkbox": "^0.5.20",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
+    "@vercel/speed-insights": "^1.2.0",
     "expo": "^53.0.9",
     "expo-font": "~13.3.1",
     "expo-splash-screen": "^0.30.8",
