--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "npx expo start --web"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@expo-google-fonts/inter": "^0.3.0",
     "@expo-google-fonts/nunito": "^0.3.0",
     "@expo/metro-runtime": "~5.0.4",
@@ -18,6 +19,7 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
     "@vercel/speed-insights": "^1.2.0",
+    "emailjs-com": "^3.2.0",
     "expo": "^53.0.9",
     "expo-font": "~13.3.1",
     "expo-splash-screen": "^0.30.8",
