--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/checkbox": "^0.5.20",
+    "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
     "@vercel/speed-insights": "^1.2.0",
