--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.4.0",
+    "firebase-admin": "^13.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
