--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' https://www.googletagmanager.com https://apis.google.com https://www.gstatic.com https://*.firebaseapp.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https://www.gstatic.com https://*.googleusercontent.com; font-src 'self' https://fonts.gstatic.com; object-src 'none'; frame-src 'self' https://*.firebaseapp.com https://accounts.google.com https://apis.google.com; frame-ancestors 'none'; upgrade-insecure-requests; connect-src 'self' wss://*.firebaseio.com https://*.firebaseio.com https://securetoken.googleapis.com https://identitytoolkit.googleapis.com https://firestore.googleapis.com https://firebasestorage.googleapis.com https://www.googleapis.com https://*.firebaseapp.com https://accounts.google.com https://content-firebaseappcheck.googleapis.com https://firebase.googleapis.com https://www.google-analytics.com;"
+          "value": "default-src 'self'; script-src 'self' https://www.googletagmanager.com https://apis.google.com https://www.gstatic.com https://*.firebaseapp.com https://static.cloudflareinsights.com https://*.vercel-insights.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https://www.gstatic.com https://*.googleusercontent.com; font-src 'self' https://fonts.gstatic.com; object-src 'none'; frame-src 'self' https://*.firebaseapp.com https://accounts.google.com https://apis.google.com; frame-ancestors 'none'; upgrade-insecure-requests; connect-src 'self' wss://*.firebaseio.com https://*.firebaseio.com https://securetoken.googleapis.com https://identitytoolkit.googleapis.com https://firestore.googleapis.com https://firebasestorage.googleapis.com https://www.googleapis.com https://*.firebaseapp.com https://accounts.google.com https://content-firebaseappcheck.googleapis.com https://firebase.googleapis.com https://www.google-analytics.com https://vitals.vercel-insights.com https://vitals.vercel-analytics.com;"
         },
         {
           "key": "X-Frame-Options",
@@ -24,11 +24,46 @@
         },
         {
           "key": "Referrer-Policy",
-          "value": "origin-when-cross-origin"
+          "value": "strict-origin-when-cross-origin"
         },
         {
           "key": "Permissions-Policy",
-          "value": "camera=(), microphone=(), geolocation=()"
+          "value": "camera=(), microphone=(), geolocation=(), payment=(), usb=(), display-capture=(), accelerometer=(), ambient-light-sensor=(), autoplay=(), battery=(), gyroscope=(), magnetometer=(), midi=(), picture-in-picture=(), speaker=(), vibrate=()"
+        },
+        {
+          "key": "Strict-Transport-Security",
+          "value": "max-age=63072000; includeSubDomains; preload"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    },
+    {
+      "source": "/_expo/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/favicon.ico",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
+        }
+      ]
+    },
+    {
+      "source": "/(robots\\.txt|sitemap\\.xml)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
         }
       ]
     }
