--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.4.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
