--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "emailjs-com": "^3.2.0",
     "expo": "^53.0.9",
